Implement routing preference thresholds